# M1_Supply_projet

./: .gitignore  .pre-commit-config.yaml  README.md  dashboard.py  main.py  pyproject.toml  render.yaml
docs/: Arborescence.MD  README.md  Test.md
interfaces/: callbacks.py  dashboard.py
notebooks/: notebook.py
src/optimisation_effectif/: __init__.py  costs.py  graph.py  models.py  solver.py
src/optimisation_effectif/Dashboard/: callbacks.py  dashboard.py  layout.py
src/optimisation_effectif/interfaces/: __init__.py  __main__.py
tests/: test_costs.py  test_graph.py  test_models.py  test_solver.py
